@startuml Decopy

' クラス定義
package Decopy{
    Package Content {
        class ContentManager {
            --
            + {static} createContent
            + {static} output
        }
        ' Decoratorパターン ここから ---
        abstract class Content {
            --
            + {abstract} getColumns
            + {abstract} getRows
            + {abstract} getRowText
        }

        class TextContent extends Content {
            - text
            --
            + getColumns
            + getRows
            + getRowText
        }

        abstract class Border extends Content {
            # content
        }

        class LeftBorder extends Border {
            --
            + getColumns
            + getRows
            + getRowText
        }

        class UpDownBorder extends Border {
            --
            + getColumns
            + getRows
            + getRowText
        }
        ' Decoratorパターン ここまで---
    }

    package UI {
        class DecopyInputController implements ActionListener{
            --
            + displayDecopyInputFrame
            + actionPerformed
        }

        class DecopyInputFrame extends Frame{
            - choiceOfPlacement
            - textFieldOfCharacter
            --
            + getDecopyInput
            + setActionListener
        }

        class DecopyInput{
        - placement
        - decoString
        --
        + setter
        + getter
        }
    }

    package util {
        class ClipboardController {
        --
        + {static} pull
        + {static} push
        }
    }

    class Decopy {}
}

' クラス間の関係
left to right direction
Decopy .> DecopyInputController
Decopy .> ContentManager: <<use>>
Content --o Border 
ContentManager ..> ClipboardController: <<use>>
DecopyInputController ..> ContentManager: <<use>>
ContentManager .> Content
DecopyInputController .> DecopyInputFrame
DecopyInputController .> DecopyInput
DecopyInputFrame .> DecopyInput


@enduml
